@@ -2,6 +2,7 @@ package com.devin.simpletools_server.service.v1.login.impl;
 
 import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.devin.simpletools_server.common.utils.AssertUtil;
 import com.devin.simpletools_server.domain.eneity.login.Users;
 import com.devin.simpletools_server.domain.eneity.login.WxUser;
@@ -9,16 +10,22 @@ import com.devin.simpletools_server.mapper.v1.login.UsersMapper;
 import com.devin.simpletools_server.mapper.v1.login.WxUserMapper;
 import com.devin.simpletools_server.service.v1.builder.TextBuilder;
 import com.devin.simpletools_server.service.v1.builder.UserBuilder;
+import com.devin.simpletools_server.service.v1.login.LoginService;
 import com.devin.simpletools_server.service.v1.login.WxMsgService;
 import lombok.AllArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import me.chanjar.weixin.common.bean.WxOAuth2UserInfo;
 import me.chanjar.weixin.mp.api.WxMpService;
 import me.chanjar.weixin.mp.bean.message.WxMpXmlMessage;
 import me.chanjar.weixin.mp.bean.message.WxMpXmlOutMessage;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.net.URLEncoder;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -32,14 +39,26 @@ import java.util.concurrent.ConcurrentHashMap;
  */
 @Slf4j
 @Service
-@AllArgsConstructor
 public class WxMsgServiceImpl implements WxMsgService {
 
-    private final WxUserMapper wxUserMapper;
-    private final UsersMapper usersMapper;
-    private final WxMpService wxMpService;
+    @Autowired
+    private WxUserMapper wxUserMapper;
 
-    private static final ConcurrentHashMap<String, Integer> AUTHORIZE_MAP = new ConcurrentHashMap<>();
+    @Autowired
+    private LoginService loginService;
+
+    @Autowired
+    private WxMpService wxMpService;
+
+    @Autowired
+    private HttpServletResponse response;
+
+    @Value("${wx.mp.callback}")
+    private String callback;
+
+    private static final String URL = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=%s&redirect_uri=%s&response_type=code&scope=snsapi_userinfo&state=STATE#wechat_redirect";
+
+    private static final ConcurrentHashMap<String, Integer> WAIT_AUTHORIZE_MAP = new ConcurrentHashMap<>();
 
 
     @Override
@@ -48,10 +67,6 @@ public class WxMsgServiceImpl implements WxMsgService {
         String openId = wxMpXmlMessage.getFromUser();
         // 获取事件码
         Integer code = getEventKey(wxMpXmlMessage);
-
-        if (Objects.isNull(code)) {
-            return null;
-        }
 
         // 判断是否为新用户
         WxUser wxUser = wxUserMapper.selectOne(new LambdaQueryWrapper<WxUser>().eq(WxUser::getOpenid, openId));
@@ -62,28 +77,60 @@ public class WxMsgServiceImpl implements WxMsgService {
         boolean authorized = registered && StrUtil.isNotBlank(wxUser.getAvatarUrl());
 
         if (registered && authorized) {
-            // TODO 推送登录成功消息
-            return null;
+            return new TextBuilder().build("登录成功", wxMpXmlMessage, wxMpService);
         }
 
         if (!registered) {
-            // 注册用户
-            Users user = UserBuilder.buildBaseUsers();
-            int userInsert = usersMapper.insert(user);
-            AssertUtil.isTrue(userInsert == 1, "微信用户注册失败");
-            WxUser wx = UserBuilder.buildWxUser(openId, user);
-            int wxInsert = wxUserMapper.insert(wx);
-            AssertUtil.isTrue(wxInsert == 1, "微信用户注册失败");
+            // 注册微信新用户
+            loginService.registerWx(openId);
         }
 
-        // 绑定登录状态
-//        AUTHORIZE_MAP.put(openId, code);
+        // 绑定等待授权登录状态
+        WAIT_AUTHORIZE_MAP.put(openId, code);
 
-        String text = """
-            请进行登录：<a href="%s">登录</a>
-            """.formatted("https://devin.wang");
+        String text = "<a href=\"%s\">同意授权</a>"
+            .formatted(String.format(URL,
+                wxMpService.getWxMpConfigStorage().getAppId(),
+                URLEncoder.encode(callback + "/wx/callback")));
 
         return new TextBuilder().build(text, wxMpXmlMessage, wxMpService);
+    }
+
+    @Override
+    public void authorize(WxOAuth2UserInfo userInfo) {
+        // 获取用户信息
+        String openId = userInfo.getOpenid();
+        // 更新微信用户信息
+        WxUser wxUser = UserBuilder.buildWxUser(openId, userInfo);
+        int update = wxUserMapper.update(wxUser, new LambdaQueryWrapper<WxUser>().eq(WxUser::getOpenid, openId));
+        AssertUtil.isTrue(update == 1, "更新微信用户失败");
+
+        // 取消绑定的微信用户验证状态
+        WAIT_AUTHORIZE_MAP.remove(openId);
+        // 通知用户登录成功
+        sendMsg("登录成功");
+    }
+
+    /**
+     * 发送信息
+     *
+     * @param msg
+     */
+    @SneakyThrows
+    private void sendMsg(String msg) {
+        response.setStatus(HttpServletResponse.SC_OK);
+        response.setContentType("text/html;charset=UTF-8");
+        response.getWriter().write(
+            """
+                <html>
+                    <head>
+                        <meta charset="UTF-8">
+                    </head>
+                    <body>
+                        <h1>%s</h1>
+                    </body>
+                </html>
+                """.formatted(msg));
     }
 
     private Integer getEventKey(WxMpXmlMessage wxMpXmlMessage) {
